--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-scroll": "^1.8.4",
+    "react-slick": "^0.29.0",
     "sharp": "0.27.2",
     "swr": "^1.2.2"
   },
