--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "babel src -d lib",
+    "build": "next build",
     "test": "jest --env=jsdom --passWithNoTests",
     "start": "next start",
     "dev": "env NODE_ENV=development TAILWIND_MODE=watch next dev",
@@ -30,6 +30,9 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.10.0",
     "@headlessui/react": "^1.4.0",
+    "@types/aos": "^3.0.4",
+    "@types/react-slick": "^0.23.10",
+    "aos": "^2.3.4",
     "axios": "^0.21.1",
     "next": "^12.0.1",
     "nprogress": "^0.2.0",
