--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "test": "jest --env=jsdom --passWithNoTests",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "dev": "env NODE_ENV=development TAILWIND_MODE=watch next dev",
     "prepare": "husky install",
     "lint:ts": "eslint --fix '**/*.{ts,tsx}'",
